# PDFVwr

./: README.md  index.html  package.json  vite.config.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_assoc.rs  lib.rs  main.rs
