[package]
name = "pdfvwr"
version = "0.1.0"
description = "A minimal PDF viewer powered by Tauri + WebView2"
authors = ["Charon2050"]
edition = "2021"

[lib]
name = "pdfvwr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[target.'cfg(windows)'.dependencies]
winreg       = "0.52"
windows-sys  = { version = "0.52", features = ["Win32_UI_Shell"] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
